everything working except labels border and tooltip

--- a/package.json
+++ b/package.json
@@ -1,15 +1,45 @@
 {
-  "name": "react-temp-webpack",
+  "name": "paraspot-web-v2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.14",
+    "@headlessui/react": "1.7.14",
+    "@heroicons/react": "^2.1.5",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/lab": "^5.0.0-alpha.75",
+    "@mui/material": "^5.16.7",
+    "@mui/styled-engine-sc": "^5.14.12",
+    "@react-pdf/font": "2.2.0",
+    "@react-pdf/renderer": "2.1.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.3.0",
+    "@tensorflow-models/mobilenet": "^1.0.0",
+    "@tensorflow/tfjs": "^1.0.1",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^1.7.4",
+    "compute-cosine-similarity": "^1.0.0",
+    "react": "^17.0.2",
+    "react-chartjs-2": "^3.3.0",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-quill": "^2.0.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "4.0.3",
+    "recharts": "^2.1.9",
+    "socket.io-client": "4.3.2",
+    "styled-components": "^5.3.11",
+    "typeface-roboto": "^1.1.13",
+    "web-vitals": "^1.0.1"
+  },
+  "resolutions": {
+    "@react-pdf/font": "2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
