--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.14",
-    "@headlessui/react": "1.7.14",
+    "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^5.16.7",
     "@mui/lab": "^5.0.0-alpha.75",
@@ -23,6 +23,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^1.7.4",
+    "clsx": "^2.1.1",
     "compute-cosine-similarity": "^1.0.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
@@ -31,7 +32,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3", 
+    "react-scripts": "4.0.3",
     "recharts": "^2.1.9",
     "socket.io-client": "4.3.2",
     "styled-components": "^5.3.11",
